fixed the overflow issue bit better

--- a/app/assets/stylesheets/list_link.css.scss
+++ b/app/assets/stylesheets/list_link.css.scss
@@ -60,7 +60,9 @@ li {
 
     padding: 0.5em 0;
     @media (min-width: $screen-sm-min) {
-      padding: 1em 0;
+      padding-bottom: 1em;
+      padding-left: 0em;
+      padding-right: 0em;
     }
     // padding: 30px 0px;
 
